fixed PWA, Dark mode, remove i18n

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,7 +8,11 @@ body,
   padding: 0;
 }
 
-html.dark {
+/* DaisyUI use :root instead of html */
+:root {
+  background: #fff;
+}
+:root.dark {
   background: #121212;
 }
 
